--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<h1 align="center">DAFTAR RIWAYAT HIDUP</h1>
 	<table align="center" border="1">
-		<tr><td colspan="2" bgcolor="#fff000"><img src="asset/img/foto.jpeg" height="400px" border="2"></td></tr>
+		<tr><td colspan="2" bgcolor="#fff000"><img src="https://lh3.googleusercontent.com/pw/AIL4fc-22hJaFGfaBWb6DCtjr9dxQOMB398nAd2fnv9K18oOtBhfsNcYBdv9Dp4UsdNYJpWi71K-ZNMMorYQtukFL_4OiYWojvks1E59iEoThDlGbCFfslw9S9tt21sl0qHGSEtBabjIJCdO_SeJXtEg-Y4KqC6EyOaurw4tWUkwXwGaRs1t-xO6FM3cb28EzG4986DPpyBpFAwXvpRRWucjddDl6ifnpdPFyOfJ9T_KvRmUXDAF0JPoWvRuHD3_ts8Hs-ZkuV8j6dWVy_LaaopRx5py2wbgwMNW4Rr-GEQpVhSonhdUGCzHejA0jf9q5B0Px6Ueq-A7AnPGjX7LQdoMb8aAd4OdYK9SWp6cuzp_8dKF8k2I2Q4r0cG9iZ1K9dBF1aXcStxMiLdqoNcQ0r1rXpWy3sJKKEq3rJSfRCZ998BA_-BkjEX00fpYjxZn8Kwu46V1F5UJZrw86kt4JFZ2hQcGa2nncBxPoAD_oSEmdH7PKjUA9yDobmbqTPB3Ib4XXDslU-acxosrsnObsvOZAoSot00SB0Cmld6QGy7GuqWFwV_-dVAf1U8ibVsZNYCwgs85mIRaIgFcj5DcylElLUXDgqATxlUgllLGum45c_-P1ham0UsSx27MVdVJdUXjwBNwQmQHa8HeAwRzGmJgyNydMDJDT5K5pTgzkWcZs7z6df3yUd4VJaWjLY3rBE_E5P9ODWbfus3Kn4Pi5WQSWA_xUKPrVxCWlQOl103fwp4WSAIg6vylfYQDMTTfH7JmkSIGFEyzOK8XuptNhWnnOoe3E23MEm8LCK0ugVqne1xef2GT1PfknMpJMI5Uk1IVTPl_LrwspQt7KwCvo9ZuhoObw45oBj3xSvo4ASLK3tLJ8jHpN_hiqp3lglC3mtFYyVdXj5ccMyJW2vGLcx6JrsTb6wRU6vKJRv6Vn5TzvuIQDFCOT4lsh2PzvbQzJmIP54fV82MMl1vKs6g_2hCZejMwFZM12WpJ" height="400px" border="2"></td></tr>
 		<tr align="center">
 			<td> 085396717324 </td>
 			<td> suciapriliani@gmail.com </td></tr>
